--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
                 <button type="button" class="hero-btn">Заказать услугу</button>
             </section>
-            <section class="benefits-section">
+            <section class="benefits-section section">
                 <h2 class="benefits-title">Наши преимущества</h2>
                 <ul class="benefits-list">
                     <li class="benefits-item">
@@ -60,7 +60,7 @@
                     </li>
                 </ul>
             </section>
-            <section class="employment-section">
+            <section class="employment-section section">
                 <h2 class="employment-title">Чем мы занимаемся</h2>
                 <ul class="employment-list">
                     <li class="employment-item"><img src="./images/example-1.jpg" alt="Разработка програмного обеспечения"
@@ -71,7 +71,7 @@
                             height="294"></li>
                 </ul>
             </section>
-            <section class="team-section">
+            <section class="team-section section">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="team-item">
