--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <div class="container">
-            <section class="examples-section">
+            <section class="examples-section section">
                 <h1 class="examples-section-title">Все примеры работ</h1>
                 <ul class="portfolio-filter-list">
                     <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button current-btn">Все</button>
