--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -31,8 +32,8 @@
         </div>
     </header>
     <main>
-        <div class="container">
-            <section class="examples-section section">
+        <section class="examples-section section">
+            <div class="container">
                 <h1 class="examples-section-title">Все примеры работ</h1>
                 <ul class="portfolio-filter-list">
                     <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button current-btn">Все</button>
@@ -45,52 +46,70 @@
                 <ul class="examples-section-list">
                     <li class="examples-section-items">
                         <img src="./images/company-1.jpg" alt="Веб-сайт" width="370" height="294" class="company-photo">
-                        <h2 class="company-name">Технокряк</h2>
-                        <p class="company-description">Веб-сайт</p>
+                        <div class="company-text">
+                            <h2 class="company-name">Технокряк</h2>
+                            <p class="company-description">Веб-сайт</p>
+                    </div>
                     </li>
                     <li class="examples-section-items">
                         <img src="./images/company-2.jpg" alt="Дизайн" width="370" height="294" class="company-photo">
-                        <h2 class="company-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                        <p class="company-description">Дизайн</p>
+                        <div class="company-text">
+                            <h2 class="company-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                            <p class="company-description">Дизайн</p>
+                        </div>
                     </li>
                     <li class="examples-section-items">
                         <img src="./images/company-3.jpg" alt="Приложение" width="370" height="294" class="company-photo">
-                        <h2 class="company-name">Ресторан <span lang="en">Seafood</span></h2>
-                        <p class="company-description">Приложение</p>
+                        <div class="company-text">
+                            <h2 class="company-name">Ресторан <span lang="en">Seafood</span></h2>
+                            <p class="company-description">Приложение</p>
+                        </div>
                     </li>
                     <li class="examples-section-items">
                         <img src="./images/company-4.jpg" alt="Маркетинг" width="370" height="294" class="company-photo">
-                        <h2 class="company-name">Проект <span lang="en">Prime</span></h2>
-                        <p class="company-description">Маркетинг</p>
+                        <div class="company-text">
+                            <h2 class="company-name">Проект <span lang="en">Prime</span></h2>
+                            <p class="company-description">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="examples-section-items">
                         <img src="./images/company-5.jpg" alt="Приложение" width="370" height="294" class="company-photo">
-                        <h2 class="company-name">Проект <span lang="en">Boxes</span></h2>
-                        <p class="company-description">Приложение</p>
+                        <div class="company-text">
+                            <h2 class="company-name">Проект <span lang="en">Boxes</span></h2>
+                            <p class="company-description">Приложение</p>
+                        </div>
                     </li>
                     <li class="examples-section-items">
                         <img src="./images/company-6.jpg" alt="Веб-сайт" width="370" height="294" class="company-photo">
-                        <h2 class="company-name" lang="en">Inspiration has no Borders</h2>
-                        <p class="company-description">Веб-сайт</p>
+                        <div class="company-text">
+                            <h2 class="company-name" lang="en">Inspiration has no Borders</h2>
+                            <p class="company-description">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="examples-section-items">
                         <img src="./images/company-7.jpg" alt="Дизайн" width="370" height="294" class="company-photo">
-                        <h2 class="company-name">Издание <span lang="en">Limited Edition</span></h2>
-                        <p class="company-description">Дизайн</p>
+                        <div class="company-text">
+                            <h2 class="company-name">Издание <span lang="en">Limited Edition</span></h2>
+                            <p class="company-description">Дизайн</p>
+                        </div>
                     </li>
                     <li class="examples-section-items">
                         <img src="./images/company-8.jpg" alt="Маркетинг" width="370" height="294" class="company-photo">
-                        <h2 class="company-name">Проект <span lang="en">LAB</span></h2>
-                        <p class="company-description">Маркетинг</p>
+                        <div class="company-text">
+                            <h2 class="company-name">Проект <span lang="en">LAB</span></h2>
+                            <p class="company-description">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="examples-section-items">
                         <img src="./images/company-9.jpg" alt="Приложение" width="370" height="294" class="company-photo">
-                        <h2 class="company-name" lang="en">Growing Business</h2>
-                        <p class="company-description">Приложение</p>
+                        <div class="company-text">
+                            <h2 class="company-name" lang="en">Growing Business</h2>
+                            <p class="company-description">Приложение</p>
+                        </div>
                     </li>
                 </ul>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
